<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/header_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg_tiptime_apps" />

    <TextView
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/header_bar"
        tools:layout_editor_absoluteY="16dp"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/header_bar"
        tools:layout_editor_absoluteX="16dp">

        <EditText
            android:id="@+id/biaya_layanan"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:hint="@string/biaya_layanan"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/kualitas_layanan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kualitas_layanan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/biaya_layanan" />

        <RadioGroup
            android:id="@+id/kualitas_opsi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/kualitas_layanan">

            <RadioButton
                android:id="@+id/kualitas_satu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/kualitas_satu" />

            <RadioButton
                android:id="@+id/kualitas_dua"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kualitas_dua" />

            <RadioButton
                android:id="@+id/kualitas_tiga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kualitas_tiga" />
        </RadioGroup>

        <Switch
            android:id="@+id/tip_bulatkan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/tip_bulatkan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/kualitas_opsi"
            app:layout_constraintTop_toBottomOf="@id/kualitas_opsi" />

        <Button
            android:id="@+id/hitung_layanan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hitung_layanan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tip_bulatkan" />

        <TextView
            android:id="@+id/tip_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_layanan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hitung_layanan" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>